--- a/css/utilities.css
+++ b/css/utilities.css
@@ -127,9 +127,50 @@
     color: var(--brand-clr-400);
 }
 
+.subpage-hero {
+    display: flex;
+    max-height: 35rem;
+    .content-col {
+        padding: 10em 8em 10em 10em;
+        .content-col__text {
+            height: 100%;
+            margin-right: 2em;
+            display: grid;
+            place-items: center;
+            .section-title {
+                font-weight: 500;
+                font-size: 2rem;
+            }
+        }
+    }
+    .subpage-hero__img {
+        clip-path: polygon(20% 0%, 100% 0%, 100% 100%, 0% 100%);
+        object-fit: fill;
+    }
+}
+
 @media (max-width: 900px) {
     .card-wrap {
         grid-auto-flow: row;
         place-content: center;
+    }
+}
+
+@media (max-width: 800px) {
+    .subpage-hero {
+        flex-direction: column-reverse;
+        .content-col {
+            padding: 3em;
+            .content-col__text {
+                margin-right: 0;
+                .section-title {
+                    font-size: 1.625rem;
+                }
+            }
+        }
+        .subpage-hero__img {
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
+            height: 500px;
+        }
     }
 }
